cluster/dev/embedded-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: embedded-api
spec:
  selector:
    matchLabels:
      app: embedded-api
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: embedded-api
        tier: backend
    spec:
      containers:
        - name: embedded-api
          image: localhost:32000/illumino-embedded-api--dev:latest
          volumeMounts:
            - mountPath: /app/src
              name: src-volume
            - mountPath: /app/package.json
              name: dependencies-volume
            - mountPath: /app/yarn.lock
              name: lockfile-volume
          ports:
            - containerPort: 30001
              name: web
            - containerPort: 9229
              name: node-debugger
          resources:
            limits:
              cpu: 500m
              memory: 600Mi
      volumes:
        - name: src-volume
          hostPath:
            path: /home/leiklier/illumino-web-services/apis/embedded/src
            type: Directory
        - name: dependencies-volume
          hostPath:
            path: /home/leiklier/illumino-web-services/apis/embedded/package.json
            type: File
        - name: lockfile-volume
          hostPath:
            path: /home/leiklier/illumino-web-services/apis/embedded/yarn.lock
            type: File
---
apiVersion: v1
kind: Service
metadata:
  name: embedded-api-service
  labels:
    app: embbedded-api
spec:
  type: NodePort
  ports:
    - name: web
      port: 30001
      nodePort: 30001
      protocol: TCP
    - name: node-debugger
      port: 9229
      nodePort: 30501
  selector:
    app: embedded-api
---
