cluster/dev/frontend-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-api
spec:
  selector:
    matchLabels:
      app: frontend-api
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend-api
        tier: backend
    spec:
      containers:
        - name: frontend-api
          image: localhost:32000/illumino-frontend-api--dev:latest
          volumeMounts:
            - mountPath: /app/src
              name: src-volume
            - mountPath: /app/package.json
              name: dependencies-volume
            - mountPath: /app/yarn.lock
              name: lockfile-volume
          ports:
            - containerPort: 30000
              name: web
            - containerPort: 9229
              name: node-debugger
          resources:
            limits:
              cpu: 750m
              memory: 800Mi
      volumes:
        - name: src-volume
          hostPath:
            path: /home/leiklier/illumino-web-services/apis/frontend/src
            type: Directory
        - name: dependencies-volume
          hostPath:
            path: /home/leiklier/illumino-web-services/apis/frontend/package.json
            type: File
        - name: lockfile-volume
          hostPath:
            path: /home/leiklier/illumino-web-services/apis/frontend/yarn.lock
            type: File
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-api-service
  labels:
    app: frontend-api
spec:
  type: NodePort
  ports:
    - name: web
      port: 30000
      nodePort: 30000
      protocol: TCP
    - name: node-debugger
      port: 9229
      nodePort: 30500
  selector:
    app: frontend-api
---
