cluster/dev/web-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
spec:
  selector:
    matchLabels:
      app: web-app
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: web-app
        tier: frontend
    spec:
      containers:
        - name: web-app
          image: localhost:32000/illumino-web-app--dev:latest
          volumeMounts:
            - mountPath: /app/src
              name: src-volume
            - mountPath: /app/package.json
              name: dependencies-volume
          ports:
            - containerPort: 3000
      volumes:
        - name: src-volume
          hostPath:
            path: /home/leiklier/illumino-web-services/websites/app/src
            type: Directory
        - name: dependencies-volume
          hostPath:
            path: /home/leiklier/illumino-web-services/websites/app/package.json
            type: File
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-app
  name: web-app-service
spec:
  ports:
    - name: web
      port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: web-app
---
